--- a/index.html
+++ b/index.html
@@ -3,23 +3,25 @@
 <head>
   <meta charset="UTF-8" />
   <title>ScanX MVP</title>
+
+  <!-- Tailwind CSS -->
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 
 <body class="bg-gray-950 text-white">
 
   <header class="p-6 border-b border-gray-800">
-    <h1 class="text-2xl font-bold">ScanX — Market Snapshot</h1>
+    <h1 class="text-2xl font-bold">ScanX – Market Snapshot</h1>
     <p class="text-gray-400 text-sm">Read-only MVP</p>
   </header>
 
   <main class="p-6">
-    <table class="w-full text-left border border-gray-800">
+    <table class="w-full border border-gray-800">
       <thead class="bg-gray-900">
         <tr>
-          <th class="p-3">Stock</th>
-          <th class="p-3">Price</th>
-          <th class="p-3">Change %</th>
+          <th class="p-3 text-left">Stock</th>
+          <th class="p-3 text-left">Price</th>
+          <th class="p-3 text-left">Change %</th>
         </tr>
       </thead>
       <tbody id="market-data"></tbody>
