--- a/index.html
+++ b/index.html
@@ -12,20 +12,30 @@
 
   <header class="p-6 border-b border-gray-800">
     <h1 class="text-2xl font-bold">ScanX – Market Snapshot</h1>
-    <p class="text-gray-400 text-sm">Read-only MVP</p>
+    <p class="text-gray-400 text-sm">
+      Read-only MVP • Data updates every 15 minutes
+    </p>
   </header>
 
   <main class="p-6">
-    <table class="w-full border border-gray-800">
-      <thead class="bg-gray-900">
-        <tr>
-          <th class="p-3 text-left">Stock</th>
-          <th class="p-3 text-left">Price</th>
-          <th class="p-3 text-left">Change %</th>
-        </tr>
-      </thead>
-      <tbody id="market-data"></tbody>
-    </table>
+    <div class="overflow-x-auto">
+      <table class="w-full border border-gray-800">
+        <thead class="bg-gray-900">
+          <tr>
+            <th class="p-3 text-left">Stock</th>
+            <th class="p-3 text-left">Price</th>
+            <th class="p-3 text-left">Change %</th>
+          </tr>
+        </thead>
+        <tbody id="market-data">
+          <tr>
+            <td colspan="3" class="p-4 text-gray-400">
+              Loading market data...
+            </td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
   </main>
 
   <script src="script.js"></script>
